@@ -1,3 +1,8 @@
+2000-11-02  Sam Steingold  <sds@gnu.org>
+
+	* lisp/bbdb.el (bbdb-hashtable-size): call `bbdb-records' only
+	when it is defined (reported by John Wiegley <johnw@gnu.org>).
+
 2000-11-01  Sam Steingold  <sds@gnu.org>
 
 	* lisp/bbdb.el (bbdb-hashtable-size): new custom variable
